@@ -2,6 +2,8 @@
 Next Version
 ================
 
+o Add url_manifest plugin
+
 ===============================
 bst-plugins-experimental 1.93.1
 ===============================
